8205580: PPC64: RTM: Don't retry lock on abort if abort was intentional

Reviewed-by: mdoerr, goetz